    timestamp). (denver at timothy dot io)
  . Fixed bug #72151 (mysqli_fetch_object changed behaviour). (Anatol)

- Reflection:
  . Fixed bug #72174 (ReflectionProperty#getValue() causes __isset call).
    (Nikita)

- Session:
  . Fixed bug #71972 (Cyclic references causing session_start(): Failed to
    decode session object). (Laruence)

- Sockets:
  . Added socket_export_stream() function for getting a stream compatible
    resource from a socket resource. (Chris Wright, Bob)

- SPL:
  . Fixed bug #72051 (The reference in CallbackFilterIterator doesn't work as
    expected). (Laruence)

- SQLite3:
  . Fixed bug #68849 (bindValue is not using the right data type). (Anatol)

- Standard:
  . Fixed bug #72075 (Referencing socket resources breaks stream_select).
    (Laruence)
  . Fixed bug #72031 (array_column() against an array of objects discards all
    values matching null). (Nikita)

28 Apr 2016 PHP 7.0.6

- Core:
  . Fixed bug #71930 (_zval_dtor_func: Assertion `(arr)->gc.refcount <= 1'
    failed). (Laruence)
  . Fixed bug #71922 (Crash on assert(new class{})). (Nikita)
  . Fixed bug #71914 (Reference is lost in "switch"). (Laruence)
  . Fixed bug #71871 (Interfaces allow final and abstract functions). (Nikita)
  . Fixed Bug #71859 (zend_objects_store_call_destructors operates on realloced
    memory, crashing). (Laruence)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)
  . Fixed bug #71750 (Multiple Heap Overflows in php_raw_url_encode/
    php_url_encode). (Stas)
  . Fixed bug #71731 (Null coalescing operator and ArrayAccess). (Nikita)
  . Fixed bug #71609 (Segmentation fault on ZTS with gethostbyname). (krakjoe)
  . Fixed bug #71414 (Inheritance, traits and interfaces). (krakjoe)
  . Fixed bug #71359 (Null coalescing operator and magic). (krakjoe)
  . Fixed bug #71334 (Cannot access array keys while uksort()). (Nikita)
  . Fixed bug #69659 (ArrayAccess, isset() and the offsetExists method).
    (Nikita)